--- a/src/App.scss
+++ b/src/App.scss
@@ -113,6 +113,7 @@ div.password-generator {
 
       width: 192px;
       height: 19px;
+      cursor: pointer;
       input {
         width: 18px;
         height: 18px;
