--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,11 @@ div.password-generator {
   transform: translate(-50%, -50%);
   background: #ffffff;
   border-radius: 12px;
+  @media screen and (max-width: 850px) {
+    width: calc(100% - 32px);
+    height: auto;
+  }
+
   &__title {
     position: absolute;
     width: 227px;
@@ -36,6 +41,13 @@ div.password-generator {
     letter-spacing: -0.02em;
 
     color: #22232e;
+    @media screen and (max-width: 850px) {
+      position: static;
+      margin: 32px 0 16px 16px;
+    }
+    @media screen and (max-width: 350px) {
+      font-size: 20px;
+    }
   }
   &__character-length-box {
     position: absolute;
@@ -64,9 +76,7 @@ div.password-generator {
     }
     &__number {
       position: absolute;
-      width: 15px;
-      height: 33px;
-      left: 395px;
+      right: 0px;
       top: 0px;
 
       font-family: "Manrope";
@@ -91,7 +101,27 @@ div.password-generator {
         height: 4px;
       }
     }
+    @media screen and (max-width: 850px) {
+      width: 100%;
+      height: auto;
+      padding: 0 16px 24px 16px;
+      position: relative;
+      top: 0;
+      left: 0;
+      &__title {
+        position: static;
+        margin: 9px 0 16px 0;
+      }
+      &__number {
+        right: 16px;
+      }
+      &__slider {
+        position: static;
+        width: 100%;
+      }
+    }
   }
+
   &__includes {
     display: flex;
     flex-direction: column;
@@ -127,6 +157,18 @@ div.password-generator {
         letter-spacing: -0.02em;
         color: #808080;
       }
+    }
+    @media screen and (max-width: 850px) {
+      position: static;
+      margin: 0 0 0 16px;
+      height: 55px;
+      width: 408px;
+      flex-wrap: wrap;
+    }
+    @media screen and (max-width: 450px) {
+      width: 95%;
+      height: auto;
+      height: auto;
     }
   }
 
@@ -202,6 +244,42 @@ div.password-generator {
         background: #30bf19;
       }
     }
+    @media screen and (max-width: 850px) {
+      position: relative;
+      top: 0;
+      left: 0;
+      margin: 16px;
+      width: calc(100% - 32px);
+      height: auto;
+      padding-bottom: 16px;
+
+      &__title {
+        position: static;
+        padding: 12px 0 4px 16px;
+        width: auto;
+        height: auto;
+      }
+      &__description {
+        top: 14px;
+        right: 16px;
+        @media screen and (max-width: 350px) {
+          position: static;
+          text-align: left;
+          padding-left: 16px;
+          width: 100%;
+          margin-bottom: 14px;
+        }
+      }
+
+      &__bar {
+        position: static;
+        width: 100%;
+        padding: 0 16px;
+        &-level {
+          width: 100%;
+        }
+      }
+    }
   }
   &__input {
     position: absolute;
@@ -232,8 +310,18 @@ div.password-generator {
       position: absolute;
       width: 20px;
       height: 20px;
-      left: 366px;
+      right: 18px;
       top: 18px;
+    }
+    @media screen and (max-width: 850px) {
+      position: relative;
+      top: 0;
+      left: 0;
+      margin: 0 16px;
+      width: calc(100% - 32px);
+      input {
+        width: 100%;
+      }
     }
   }
   &__copy-password {
@@ -266,6 +354,13 @@ div.password-generator {
         text-align: center;
         letter-spacing: -0.02em;
         color: #ffffff;
+      }
+      @media screen and (max-width: 850px) {
+        position: relative;
+        top: 0;
+        left: 0;
+        margin: 24px 16px 20px 16px;
+        width: calc(100% - 32px);
       }
     }
     button:active {
